remove scrollbar and fixed img clip

--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ body {
   padding-top: 5rem;
   margin-top: 0.5rem;
 }
+body::-webkit-scrollbar {
+  display: none;
+}
 header {
   position: fixed;
   width: calc(100% - 2rem);
@@ -217,11 +220,9 @@ pages {
   );
 }
 .motto-img img {
-  position: absolute;
-  top: 2px; /* equal to border thickness */
-  left: 2px; /* equal to border thickness */
-  width: 99%; /* container height - (border thickness * 2) */
-  height: 98%; /* container height - (border thickness * 2) */
+  scale: 0.95;
+  height: 100%;
+  width: 100%;
   clip-path: polygon(
     95% 53%,
     99% 34%,
